<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/product_category"
            android:textSize="16sp"
            android:textColor="#3C2956"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/event_type"
            android:textSize="16sp"
            android:textColor="#3C2956"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/max_price"
            android:textSize="16sp"
            android:textColor="#3C2956"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/editMaxPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/input_max_price"/>

        <TextView
            android:text="@string/availability"
            android:textSize="16sp"
            android:textColor="#3C2956"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"/>

        <Spinner
            android:id="@+id/spinnerAvailability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnApplyFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_button"
            android:layout_marginTop="24dp"
            android:background="#5b4376"
            android:textColor="#f3eee9"/>

    </LinearLayout>
</ScrollView>
