<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.ProfileFragment"
    android:background="@color/background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Profile Image Section -->
            <FrameLayout
                android:id="@+id/profileImageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- User Data Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rf1_name"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextIme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unesite ime"
                android:inputType="textPersonName"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rf1_lastname"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextPrezime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unesite prezime"
                android:inputType="textPersonName"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rf1_email"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <!-- Email (non-editable) -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unesite email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rf1_city"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextGrad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unesite grad"
                android:inputType="text"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rf1_address"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextAdresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unesite adresu"
                android:inputType="text"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rf1_address_number"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextBrojAdrese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unesite broj adrese"
                android:inputType="number"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rf1_phone_number"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unesite broj telefona"
                android:inputType="phone"
                android:layout_marginTop="8dp"/>

            <!-- Change Password Section -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/rf1_password"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switchChangePassword"
                android:layout_width="212dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:text="@string/password_change" />

            <!-- Password Fields (only visible if Switch is on) -->
            <LinearLayout
                android:id="@+id/passwordFieldsContainer"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/oldp"
                    android:inputType="textPassword"
                    android:layout_marginTop="8dp"/>

                <EditText
                    android:id="@+id/editTextNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newp"
                    android:inputType="textPassword"
                    android:layout_marginTop="8dp"/>

                <EditText
                    android:id="@+id/editTextConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newpc"
                    android:inputType="textPassword"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>


            <!-- Deactivate Account Button -->
            <Button
                android:id="@+id/changeAccountButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                android:background="@color/text_color"
                android:text="@string/change"
                android:textColor="@color/background_color" />

            <Button
                android:id="@+id/deactivateAccountButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@color/text_color"
                android:text="@string/deactivate"
                android:textColor="@color/background_color" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
